# proyecto-diffix

./: .env.example  .gitignore  CLAUDE.md  MVP-spec.md  README.md  diff.txt  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py  models.py
backend/app/agents/scout/: __init__.py  core.py  strategies.py
backend/app/core/: base.py  celery_app.py  config.py  database.py  deps.py  exceptions.py  logging.py  pagination.py  plans.py  security.py
backend/app/domains/auth/: models.py  router.py  schemas.py  service.py
backend/app/domains/billing/: router.py  schemas.py
backend/app/domains/changes/: models.py  router.py  schemas.py  service.py
backend/app/domains/competitors/: models.py  router.py  schemas.py  service.py
backend/app/domains/digests/: models.py
backend/app/domains/insights/: models.py  router.py  schemas.py  service.py
backend/app/domains/notifications/: models.py  router.py  (+2 more)
backend/app/integrations/: __init__.py  apify.py  email.py  llm.py  mercadolibre.py  payments.py  scraper.py  storage.py  whatsapp.py
backend/app/workers/: __init__.py  tasks.py
backend/scripts/: seed_staging.py
backend/tests/: conftest.py  test_plans.py
backend/tests/agents/: test_scout_core.py  test_scout_e2e.py  test_scout_integration.py  test_scout_snapshots.py  test_scout_task.py
backend/tests/domains/: test_competitors.py  test_listing_endpoints.py  test_webhooks.py
backend/tests/integrations/: test_apify.py  test_mercadolibre.py  test_scraper.py
(+47 files in other folders)
