[project]
name = "vigi-ai-backend"
version = "0.1.0"
description = "Backend de vigi.ai — inteligencia competitiva para distribuidoras argentinas"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "svix>=1.20",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
    "litellm>=1.40",
    "langfuse>=2.0",
    "boto3>=1.34",
    "python-multipart>=0.0.9",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[s3]>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
# Librerias sin stubs completos — ignorar errores de atributos en imports externos
[[tool.mypy.overrides]]
module = ["celery", "celery.*", "langfuse.*", "litellm.*", "svix.*", "pgvector", "pgvector.*", "boto3.*", "botocore.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
